[project]
name = "snowflake-lineage-explorer"
version = "1.0.0"
description = "Interactive Streamlit app for exploring Snowflake data lineage and column-level access history using GET_LINEAGE and ACCESS_HISTORY."
authors = [
    {name = "Andi Muskaj", email = "andimuskaj872@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["snowflake", "lineage", "streamlit", "data", "analytics", "access-history", "data-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "streamlit>=1.31.0",
    "snowflake-connector-python[secure-local-storage]>=3.7.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyarrow<19.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/andimuskaj872/snowflake_lineage"
Repository = "https://github.com/andimuskaj872/snowflake_lineage"
Issues = "https://github.com/andimuskaj872/snowflake_lineage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "app.py",
    "requirements.txt", 
    "snowflake_config.toml.example",
    ".env.example"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py39']